--- a/PoEWatch/PoEWatch.csproj
+++ b/PoEWatch/PoEWatch.csproj
@@ -44,10 +44,11 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>poewatch_FT3_icon.ico</ApplicationIcon>
@@ -76,6 +77,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenCapture.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="SetupCapture.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetupCapture.Designer.cs">
+      <DependentUpon>SetupCapture.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +96,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SetupCapture.resx">
+      <DependentUpon>SetupCapture.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -100,12 +111,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Capture\Capture.csproj">
-      <Project>{f37d306e-6bec-416e-bfb9-166c3bb2b278}</Project>
-      <Name>Capture</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="poewatch_FT3_icon.ico" />
