--- a/PoEWatch/Properties/Settings.settings
+++ b/PoEWatch/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="IngameMask" Type="System.Drawing.Size" Scope="User">
       <Value Profile="(Default)">20, 30</Value>
     </Setting>
+    <Setting Name="ProcessName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">PathOfExile_x64</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
